# tilt-machine

./: Cargo.toml  main.py  pyproject.toml  setup.py  tilt-checker.ino
arduino/tilt-checker/: tilt-checker.ino
src/: install.rs  main.rs  run.rs
src/install/: mod.rs  tilt-machine.service
tiltmachine/: main.py  util.py
